--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nuxt": "^2.0.0",
     "qs": "^6.9.4",
     "vee-validate": "^3.2.1",
+    "vue-underscore": "^0.1.4",
     "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {
