--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.24.0",
     "nuxt": "^2.0.0",
     "qs": "^6.9.4",
+    "quill": "^1.3.7",
     "vee-validate": "^3.2.1",
     "vue-quill-editor": "^3.0.6",
     "vue-underscore": "^0.1.4",
